_sass/theme.scss
/* ... */
@media (min-width: 38em) {
  html {
    font-size: 18px;
  }
}

body {
  color: var(--body-color);
  background-color: var(--body-bg);
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

/* No `:visited` state is required by default (browsers will use `a`) */
a {
  color: var(--link-color);
  text-decoration: none;
}
a strong {
  color: inherit;
}
/* `:focus` is linked to `:hover` for basic accessibility */
a:hover,
a:focus {
  text-decoration: underline;
}

/* Headings */
h1, h2, h3, h4, h5, h6 {
  font-family: "PT Sans", Helvetica, Arial, sans-serif;
  letter-spacing: -.025rem;
  margin-bottom: .5rem;
  font-weight: 400;
  line-height: 1.25;
  color: var(--heading-color);
  text-rendering: optimizeLegibility;
}
h1 {
  font-size: 2rem;
}
h2 {
  margin-top: 1rem;
  font-size: 1.75rem;
}
h3 {
  margin-top: 1.5rem;
  font-size: 1.5rem;
}
h4 {
  margin-top: 1rem;
  font-size: 1.25rem;
}
h5, h6 {
  margin-top: 1rem;
  font-size: 1.10rem;
}

/* Body text */
p {
  margin-top: 0;
  margin-bottom: 1rem;
}

strong {
  color: var(--body-color-secondary);
}


/* Lists */
ul, ol, dl {
  margin-top: 0;
//   margin-bottom: 1rem;
}

dt {
  font-weight: bold;
}
dd {
  margin-bottom: .5rem;
}

/* Misc */
hr {
  position: relative;
  margin: 1.5rem 0;
  border: 0;
  border-top: 1px solid var(--border-color);
  border-bottom: 1px solid var(--border-color-light);
}

abbr {
  font-size: 85%;
  font-weight: bold;
  color: var(--gray-700);
  text-transform: uppercase;
}
abbr[title] {
  cursor: help;
  border-bottom: 1px dotted var(--border-color-medium);
}

/* Code */
code {
  padding: .12em .30em;
  font-size: 87%;
  color: var(--code-color);
  background-color: var(--code-bg);
  border-radius: 3px;
  border: 1px solid var(--border-color);
  font-weight: 500;
}
pre {
  display: block;
  margin-top: 0;
  margin-bottom: 1rem;
  padding: 1rem;
  font-size: .8rem;
  line-height: 1.4;
  overflow-x: auto;
  background-color: var(--pre-bg);
  border: 1px solid var(--border-color);
  border-radius: 4px;
}
pre code {
  padding: 0;
  font-size: 100%;
  color: inherit;
  background-color: transparent;
  border: none;
  font-weight: normal;
}

/* Pygments via Jekyll */
.highlight {
  margin-bottom: 1rem;
  border-radius: 4px;
}
.highlight pre {
  margin-bottom: 0;
}

/* Quotes */
blockquote {
  padding: .5rem 1rem;
  margin: .8rem 0;
  color: var(--blockquote-color);
  border-left: .25rem solid var(--blockquote-border);
}
blockquote p:last-child {
  margin-bottom: 0;
}
@media (min-width: 30em) {
  blockquote {
    padding-right: 4rem;
    padding-left: 1.25rem;
  }
}

img {
  display: block;
  max-width: 100%;
  margin: 0 auto;
}

/* Tables */
table {
  margin-bottom: 1rem;
  width: 100%;
  border: 1px solid var(--table-border);
  border-collapse: collapse;
  table-layout: fixed;
}
td,
th {
  padding: .25rem .5rem;
  border: 1px solid var(--table-border);
}
tbody tr:nth-child(odd) td,
tbody tr:nth-child(odd) th {
  background-color: var(--table-stripe-bg);
}

figure {
  margin-left: 0rem;
}



/*
 * Wrapper
 *
 * The wrapper is used to position site content when the sidebar is toggled. We
 * use an outter wrap to position the sidebar without interferring with the
 * regular page content.
 */

.wrap {
  position: relative;
  width: 100%;
}


/*
 * Container
 *
 * Center the page content.
 */

.container {
  max-width: 28rem;
  padding-left:  1rem;
  padding-right: 1rem;
  margin-left:  auto;
  margin-right: auto;
}
@media (min-width: 38em) {
  .container {
    max-width: 36rem;
    padding-left:  2rem;
  }
}
@media (min-width: 58em) {
  .container {
    max-width: 50rem;
  }
}


/*
 * Masthead
 *
 * Super small header above the content for site name and short description.
 */

.masthead {
  position: sticky;
  top: 0;
  z-index: 5;
  padding-top:    1rem;
  padding-bottom: 1rem;
  margin-bottom: 2rem;
  background-color: var(--body-bg);
  border-bottom: 1px solid var(--masthead-border-bottom);
  border-top: 5px solid var(--masthead-border-top);
}
.masthead .container {
  display: flex;
  align-items: center;
}
.masthead-title {
  flex: 1;
  order: 1;
  text-align: center;
  margin-top: 0;
  margin-bottom: 0;
  color: var(--masthead-title-color);
}
.masthead-title a {
  color: var(--masthead-title-color);
  font-size: 1.5rem;
  margin-right: 0.25rem;
}
.masthead-title small {
  font-size: 75%;
  font-weight: 400;
  color: var(--masthead-tagline-color);
  letter-spacing: 0;
}

@media (max-width: 64em) {
  .masthead-title small {
    display: none;
  }
}

@media (min-width: 64em) {
  .masthead-title {
    text-align: left;
  }
  .sidebar-toggle {
    position: absolute;
    top: 50%;
    left: 1rem;
    transform: translateY(-50%);
  }
}


/*
 * Sidebar
 *
 * The sidebar is the drawer, the item we are toggling with our handy hamburger
 * button in the corner of the page.
 *
 * This particular sidebar implementation was inspired by Chris Coyier's
 * "Offcanvas Menu with CSS Target" article, and the checkbox variation from the
 * comments by a reader. It modifies both implementations to continue using the
 * checkbox (no change in URL means no polluted browser history), but this uses
 * `position` for the menu to avoid some potential content reflow issues.
 *
 * Source: http://css-tricks.com/off-canvas-menu-with-css-target/#comment-207504
 */

/* Style and "hide" the sidebar */
.sidebar {
  position: fixed;
  top: 0;
  bottom: 0;
  left: -14rem;
  width: 14rem;
  visibility: hidden;
  overflow-y: auto;
  font-size: .875rem; /* 15px */
  color: var(--sidebar-color);
  background-color: var(--sidebar-bg);
  transition: all .3s ease-in-out;
}
@media (min-width: 30em) {
  .sidebar {
    font-size: .75rem; /* 14px */
  }
}

/* Sidebar content */
.sidebar a {
  font-weight: normal;
  color: var(--sidebar-link-color);
}
.sidebar-item {
  padding: 1rem;
}
.sidebar-item p:last-child {
  margin-bottom: 0;
}

/* Sidebar nav */
.sidebar-nav {
  border-bottom: 1px solid var(--sidebar-border);
}
/* ... */

